Updates to Index and resume

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         <section class="resume-section">
             <h2>Experience</h2>
             <div class="job">
-                <h3>Systems Administrator | The Broad Foundation</h3>
+                <h3>Associate Director, IT | The Broad Foundation</h3>
                 <p class="date-location">Oct 2021 - Present | Los Angeles, CA</p>
                 <ul class="responsibilities">
                     <li>Spearheaded the enhancement of end-user experiences through the design, implementation, and support of Microsoft and VMware technologies across cloud, on-prem, and hybrid platforms.</li>
